--- a/_posts/2020-10-21-mon-article/Article-1-Snow-Leopards.html
+++ b/_posts/2020-10-21-mon-article/Article-1-Snow-Leopards.html
@@ -49,7 +49,7 @@
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["mon-article_files/bowser-1.9.3/bowser.min.js","mon-article_files/distill-2.2.21/template.v2.js","mon-article_files/jquery-1.11.3/jquery.min.js","mon-article_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"character","attributes":{},"value":["mon-article_files/bowser-1.9.3/bowser.min.js","mon-article_files/distill-2.2.21/template.v2.js","mon-article_files/jquery-1.11.3/jquery.min.js","mon-article_files/webcomponents-2.0.0/webcomponents.js","mon-article.html"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -927,10 +927,10 @@
   </script>
   
   <!--/radix_placeholder_distill-->
-  <script src="mon-article_files/jquery-1.11.3/jquery.min.js"></script>
-  <script src="mon-article_files/bowser-1.9.3/bowser.min.js"></script>
-  <script src="mon-article_files/webcomponents-2.0.0/webcomponents.js"></script>
-  <script src="mon-article_files/distill-2.2.21/template.v2.js"></script>
+  <script src="Article-1-Snow-Leopards_files/jquery-1.11.3/jquery.min.js"></script>
+  <script src="Article-1-Snow-Leopards_files/bowser-1.9.3/bowser.min.js"></script>
+  <script src="Article-1-Snow-Leopards_files/webcomponents-2.0.0/webcomponents.js"></script>
+  <script src="Article-1-Snow-Leopards_files/distill-2.2.21/template.v2.js"></script>
   <!--radix_placeholder_site_in_header-->
   <!--/radix_placeholder_site_in_header-->
 
