--- a/_posts/2020-10-21- Article 1 Snow Leopards/Article-1-Snow-Leopards.html
+++ b/_posts/2020-10-21- Article 1 Snow Leopards/Article-1-Snow-Leopards.html
@@ -979,7 +979,7 @@
 <thead>
 <tr class="header">
 <th>Word from the text</th>
-<th>synonym/definition in English</th>
+<th>Synonym/definition in English</th>
 <th>French Translation</th>
 </tr>
 </thead>
@@ -1146,11 +1146,11 @@
 <tbody>
 <tr class="odd">
 <td>Published in ? When ? (If mentioned)</td>
-<td>Scientific Reports (April 2020)</td>
+<td>- Scientific Reports (April 2020)</td>
 </tr>
 <tr class="even">
-<td>General topic</td>
-<td>Cameras an Scientists may overcount snow leopards because they are difficult to identify</td>
+<td>General Topic</td>
+<td>- Cameras an Scientists may overcount snow leopards because they are difficult to identify</td>
 </tr>
 <tr class="odd">
 <td>Procedure/ what was examinated</td>
